--- a/Blog/templates/Blog/layout.html
+++ b/Blog/templates/Blog/layout.html
@@ -92,6 +92,7 @@
             font-size: 30px;
             position: relative;
             height: 200px;
+            width: 1200px;
             overflow: auto;
         }
 
@@ -114,7 +115,7 @@
         .dropdown-content {
             display: none;
             position: absolute;
-            top: 60px;
+            top: 288px; /* Adjusted for dropdown to drop down */
             right: 0;
             background-color: #000;
             min-width: 160px;
@@ -234,6 +235,13 @@
             bottom: 0;
         }
 
+        .hamburger {
+            display: none;
+            font-size: 30px;
+            cursor: pointer;
+            color: white;
+        }
+
         @media (max-width: 768px) {
             .navbar {
                 flex-direction: column;
@@ -245,6 +253,7 @@
                 flex-direction: column;
                 align-items: flex-start;
                 width: 100%;
+                display: none;
             }
 
             .navbar-left .nav-link,
@@ -264,8 +273,12 @@
             }
 
             .dropdown-content {
-                top: 50px;
+                top: 50px; /* Adjusted for dropdown to drop down */
                 right: 10px;
+            }
+
+            .hamburger {
+                display: block;
             }
         }
     </style>
@@ -280,6 +293,7 @@
     </div>
     <!--Navigation bar-->
     <nav class="navbar">
+        <span class="hamburger" onclick="toggleMenu()">&#9776;</span>
         <div class="navbar-left">
             <a href="{% url 'index' %}" class="nav-link"> <i class="fa-regular fa-newspaper"></i> News</a>
             <a href="{% url 'latest' %}" class="nav-link"><i class="fa-solid fa-newspaper"></i> Latest</a>
@@ -302,7 +316,7 @@
                 <span class="username">{{ request.user.username }}</span>
                 <img src="{% static 'Blog/images/avatar5.jpeg' %}" alt="Avatar" class="avatar" onclick="toggleDropdown()">
                 <div id="myDropdown" class="dropdown-content">
-                    <a href="#profile"><i class="fa-solid fa-user"></i> Your Profile </a>
+                    <a href="#profile"><i class="fa-solid fa-user"></i> Your Profile</a>
                     <a href="#settings"><i class="fa-solid fa-bell"></i> Notifications</a>
                     <a href="#settings"><i class="fa-solid fa-gears"></i> Settings</a>
                     <a href="{% url 'logout_user' %}"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
@@ -317,6 +331,13 @@
         {% endif %}
     </nav>
     <script>
+        function toggleMenu() {
+            const navbarLeft = document.querySelector('.navbar-left');
+            const navbarRight = document.querySelector('.navbar-right');
+            navbarLeft.style.display = navbarLeft.style.display === 'flex' ? 'none' : 'flex';
+            navbarRight.style.display = navbarRight.style.display === 'flex' ? 'none' : 'flex';
+        }
+
         function toggleDropdown() {
             document.getElementById("myDropdown").classList.toggle("show");
         }
