--- a/Blog/templates/Blog/layout.html
+++ b/Blog/templates/Blog/layout.html
@@ -31,9 +31,8 @@
             height: auto;
             position: relative;
         }
-
-        .navbar-left,
-        .navbar-right {
+        .navbar-right,
+        .navbar-left {
             display: flex;
             align-items: center;
         }
@@ -41,6 +40,7 @@
         .navbar-left {
             flex-wrap: wrap;
         }
+      
        
     
 
