--- a/Blog/templates/Blog/layout.html
+++ b/Blog/templates/Blog/layout.html
@@ -9,20 +9,19 @@
     <title>Gaming Blog</title>
 
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            
-          
-        }
+      
 
         body {
+          margin: 0;
+            padding: 0;
+            box-sizing: border-box;
             font-family: Arial, sans-serif;
             background-color: azure;
             color: #ffffff;
             display: block;
             max-width: 100%;
+            overflow-x: hidden; /* Add this line to prevent horizontal scrolling */
+            
             
         }
 
@@ -177,7 +176,7 @@
             display: inline-block;
             margin: 4px 2px;
             height: 50px;
-            width: 50px;
+            width: 60px;
             vertical-align: bottom;
         }
 
