--- a/Blog/templates/Blog/latest.html
+++ b/Blog/templates/Blog/latest.html
@@ -4,6 +4,7 @@
 {% block head %}
 <style>
 .grid-container {
+  background-color: burlywood;
   display: grid;
   grid-template-columns: 1fr;
   gap: 20px;
