--- a/Blog/templates/Blog/layout.html
+++ b/Blog/templates/Blog/layout.html
@@ -97,7 +97,7 @@
     text-shadow: 2px 2px black;
     background: white url("{% static 'Blog/images/header.jpg' %}") no-repeat center center;
     background-size: cover;
-    color: rgb(240, 240, 18);
+    color: orange;
     font-size: 24px; /* Slightly reduced font size */
     position: relative;
     height: auto; /* Adjusted to auto for dynamic height based on content */
