--- a/Blog/templates/Blog/latest.html
+++ b/Blog/templates/Blog/latest.html
@@ -3,79 +3,51 @@
 
 {% block head %}
 <style>
-  body{
-    background-color:orange;
+  body {
+    color: black;
+    background-color: rgb(237, 153, 51);
   }
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
-  padding: 20px;
-  color: black;
-  
-}
 
-.heading {
-  text-align: center;
-  grid-column: span 3;
-}
-
-.article {
-  border: 1px solid #ccc;
-  padding: 15px;
-  border-radius: 5px;
-  background-color: #f9f9f9;
-  /* Set background image */
-  background-size: cover;
-  background-position: center;
-  color:whitesmoke
-}
-
-.article h2 {
-  margin-top: 0;
-}
-
-.article .platforms {
-  font-style: italic;
-  color: gray;
-}
-
-.article img {
-  display: none; /* Hide image tag if using as background */
-}
-
-/* Responsive Design */
-@media (max-width: 1200px) {
   .grid-container {
-    grid-template-columns: repeat(2, 1fr);
+    margin: auto;
+    max-width: 1000px;
+    display: grid;
+    grid-gap: 20px; /* added for spacing between articles */
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* dynamic grid */
   }
-}
 
-@media (max-width: 768px) {
-  .grid-container {
-    grid-template-columns: 1fr;
+  .article {
+    background-color: black;
+    color: white;
+    padding: 10px;
   }
-}
+
+  .picture {
+    width: 100%;
+    height: auto;
+  }
+
+  .article-title {
+    margin-top: 0;
+  }
 </style>
 {% endblock %}
 
 {% block body %}
+<header>
+  <h1>Latest Articles</h1>
+</header>
 <div class="grid-container">
-  <header class="heading">
-    <h1>Latest</h1>
-  </header>
   {% for article in object_list %}
-  <div class="article" style="background-image: url('{{ article.picture.url }}');">
-    <h2>{{ article.title }}</h2>
-    <div class="platforms">
-      {% for platform in article.platforms.all %}
-        {{ platform.name }}{% if not forloop.last %}, {% endif %}
-      {% endfor %}
-    </div>
-    <p>{{ article.subtitle }}</p>
-    <p>{{ article.content }}</p>
-    <p>Author: {{ article.author }}</p>
-    <p>Date Posted: {{ article.date_posted }}</p>
+  <div class="article">
+    <article>
+      <img class="picture" src="{{ article.picture.url }}" alt="{{ article.title }}">
+      <h2 class="article-title">{{ article.title }}</h2>
+      
+      <p>Author: {{ article.author }}</p>
+      <p>Date Posted: {{ article.date_posted }}</p>
+      <!-- Add more details if needed -->
+    </article>
   </div>
   {% endfor %}
 </div>
