--- a/Blog/templates/Blog/layout.html
+++ b/Blog/templates/Blog/layout.html
@@ -312,7 +312,7 @@ margin-top: 15px;
     <nav class="navbar">
         <span class="hamburger" onclick="toggleMenu()">&#9776;</span>
         <div class="navbar-left">
-            <a href="{% url 'index' %}" class="nav-link"> <i class="fa-regular fa-newspaper"></i> News</a>
+            <a href="{% url 'news' %}" class="nav-link"> <i class="fa-regular fa-newspaper"></i> News</a>
             <a href="{% url 'latest' %}" class="nav-link"><i class="fa-solid fa-newspaper"></i> Latest</a>
             <a href="{% url 'latest' %}" class="nav-link"><i class="fa-solid fa-ranking-star"></i> Reviews</a>
             <a href="#" class="nav-link"><i class="fa-solid fa-desktop"></i> PC</a>
