--- a/Blog/templates/Blog/layout.html
+++ b/Blog/templates/Blog/layout.html
@@ -12,15 +12,24 @@
     <title>Gaming Blog</title>
 
     <style>
-            body {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: "Oxanium", sans-serif;
-            background-color: #121212;
-            color: #ffffff;
-            overflow-x: hidden;
-        }
+         body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Oxanium", sans-serif;
+    background-color: #121212;
+    color: #ffffff;
+    overflow-x: hidden;
+}
+
+.header h1,
+.header p,
+.nav-link,
+.nav-button,
+.username {
+    font-family: "Oxanium", sans-serif;
+}
+
 
         .header {
             display: flex;
@@ -36,7 +45,7 @@
         }
 
         .header h1 {
-            font-size: 52px;
+            font-size: 56px;
             margin: 0;
             text-transform: uppercase;
             animation: glitch 1s infinite;
@@ -113,7 +122,7 @@
         }
 
         .nav-link:hover {
-            color: #fdd835;
+            color: #0ff;
         }
 
         .nav-button {
@@ -127,17 +136,17 @@
 
         .nav-button.login {
             background-color: #000;
-            color: #fdd835;
-            border: 1px solid #fdd835;
+            color: #0ff;
+            border: 1px solid #0ff;
         }
 
         .nav-button.subscribe {
-            background-color: #fdd835;
+            background-color: #0ff;
             color: #000;
         }
 
         .nav-button.login:hover {
-            background-color: #fdd835;
+            background-color: #0ff;
             color: #000;
         }
 
@@ -150,7 +159,7 @@
             width: 40px;
             height: 40px;
             border-radius: 50%;
-            border-color: #fdd835;
+            border-color: #0ff;
             border-width: 2px;
             border-style: solid;
             cursor: pointer;
@@ -180,7 +189,7 @@
         }
 
         .dropdown-content a:hover {
-            background-color: #fdd835;
+            background-color: #0ff;
             color: rgb(0, 0, 0);
         }
 
@@ -210,7 +219,7 @@
         }
 
         .button:hover {
-            color: #fdd835;
+            color: #0ff;
             transition-duration: 0.4s;
         }
 
