--- a/Blog/templates/Blog/latest.html
+++ b/Blog/templates/Blog/latest.html
@@ -5,7 +5,6 @@
   body {
     color: #fff;
     background-color: #1e1e1e;
-    font-family: 'Roboto', sans-serif;
     line-height: 1.6;
     margin: 0;
     padding: 0;
@@ -13,7 +12,7 @@
 
   .grid-container {
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 1fr;
     grid-gap: 20px;
     max-width: 1200px;
     margin: 30px auto;
@@ -22,7 +21,7 @@
 
   .left-column {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: 1fr;
     grid-gap: 20px;
   }
 
@@ -104,6 +103,16 @@
   .list-articles p {
     font-size: 14px;
     color: #ccc;
+  }
+
+  @media only screen and (min-width: 768px) {
+    .grid-container {
+      grid-template-columns: 2fr 1fr;
+    }
+
+    .left-column {
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    }
   }
 </style>
 {% endblock %}
