header background update

--- a/Blog/templates/Blog/layout.html
+++ b/Blog/templates/Blog/layout.html
@@ -39,7 +39,7 @@
             padding: 50px 20px;
             text-align: center;
             color: #fdd835;
-            background: linear-gradient(135deg, #1a1a1a, #000);
+            background: linear-gradient(135deg, #090f26, #1c0f2b); 
             position: relative;
             overflow: hidden;
         }
