--- a/Blog/templates/Blog/layout.html
+++ b/Blog/templates/Blog/layout.html
@@ -42,6 +42,7 @@
             background: linear-gradient(135deg, #090f26, #1c0f2b); 
             position: relative;
             overflow: hidden;
+            max-width: 100%;
         }
 
         .header h1 {
